<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/match_card_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/match_profile_picture"
            android:background="@color/colorPrimaryDark"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/item_spacing">

            <TextView
                android:id="@+id/match_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipsum_lorum"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageButton
                android:id="@+id/match_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/item_spacing"
                android:layout_marginTop="@dimen/item_spacing"
                android:src="@drawable/ic_favorite_outlined"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:tint="@color/grey"/>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>